--- a/home/static/assets/css/style.css
+++ b/home/static/assets/css/style.css
@@ -270,6 +270,9 @@ h6 {
   visibility: visible;
 }
 
+.contact-icon{
+  margin-bottom: 1.25rem;
+}
 @media (max-width: 1366px) {
   .navbar .dropdown .dropdown ul {
     left: -90%;
@@ -297,6 +300,7 @@ h6 {
 .mobile-nav-toggle.bi-x {
   color: #5c9f24;
 }
+
 
 @media (max-width: 991px) {
   
